# maya-simple-export

./: README.md  installer.mel  pyproject.toml  simple_exporter.py
