[build-system]
requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"


[tool.setuptools]
py_modules = ["simple_exporter"]


[project]
name = "simple_exporter"
authors = [
    {name = "Hannes"},
]
description = "a simple maya exporter"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["maya", "plugin", "exporter"]
# license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]
# dynamic = ["version"]
version = "0.0.1"

# [project.optional-dependencies]
# yaml = ["pyyaml"]

# [project.scripts]
# my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/maya-simple-export"
